# aruco-tracking

./: .gitignore  .gitmodules  CMakeLists.txt  Tracker.cpp  Tracker.h  TrackerAR.cpp  TrackerAR.h  main.2.cpp  main.3.cpp  main.cpp  main.gazebo.cpp  main.ros.cpp  main_gazebo.cpp  main_ros.cpp
agent-xb/: AgentXB.cpp  AgentXB.h
